--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="ridvan.snorelistener">
+          package="ridvan.wakbaz">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.RECORD_AUDIO"/>
@@ -20,10 +20,10 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version"/>
 
-        <activity android:name=".activities.MainActivity">
+        <activity android:name="ridvan.wakbaz.activities.MainActivity">
         </activity>
         <activity
-            android:name=".activities.SplashActivity"
+            android:name="ridvan.wakbaz.activities.SplashActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="Snore Listener"
             android:theme="@style/Transparent">
